--- a/data/social.yaml
+++ b/data/social.yaml
@@ -1,12 +1,12 @@
 # Show or hide by uncommenting and vice versa
 - item: "github"
-  url: "https://github.com/vietanhdev"
+  url: "https://github.com/vietanhdev/algo-curious"
 # - item: "twitter"
 #   url: "https://twitter.com/vietanhdev"
 # - item: "linkedin"
 #   url: "https://www.linkedin.com/in/vietanhdev"
-- item: "youtube"
-  url: "https://www.youtube.com/channel/UCLUmTiBrfQZi6WZE6kYmGmw"
+# - item: "youtube"
+#   url: "https://www.youtube.com/channel/UCLUmTiBrfQZi6WZE6kYmGmw"
 # - item: "facebook"
 #  url: "https://facebook.com/#"
 # - item: "instagram"
